refactor(Cars): 자동차를 관리하는 행위들 위임