@@ -1,6 +1,8 @@
 package model.car;
 
+import model.manager.CarMoveManager;
 import util.CarNameValidator;
+import util.RandomNumberGenerator;
 
 import java.util.Collections;
 import java.util.List;
@@ -21,7 +23,26 @@ public class Cars {
         CarNameValidator.validate(carNames);
     }
 
-    public List<Car> getCars() {
-        return Collections.unmodifiableList(cars);
+    public List<Car> getCurrentResult() {
+        return List.copyOf(cars);
+    }
+
+    public void moveAllCarsOnce(CarMoveManager carMoveManager) {
+        cars.forEach(car -> car.move(carMoveManager.isMove(RandomNumberGenerator.getRandomNumber())));
+    }
+
+    public List<String> getWinners() {
+        int maxPosition = getMaxPosition();
+        return cars.stream()
+                .filter(car -> car.isSame(maxPosition))
+                .map(Car::getName)
+                .collect(Collectors.toUnmodifiableList());
+    }
+
+    private int getMaxPosition() {
+        return cars.stream()
+                .mapToInt(Car::getPosition)
+                .max()
+                .orElse(0);
     }
 }
